[project]
name = "custodial-wallet-bot"
version = "0.1.0"
description = "Custodial Telegram wallet bot for BTC / USDT / USDC / TON across multiple chains"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.27",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "aiosqlite>=0.20.0",
    "redis>=5.0.1",
    "apscheduler>=3.10.4",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.1",
    "cryptography>=42.0.5",
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4.2",
    "reportlab>=4.1.0",
    "bip-utils>=2.9.3",
    "mnemonic>=0.21",
    "ecdsa>=0.18.0",
    "web3>=6.15.1",
    "tronpy>=0.5.0",
    "solders>=0.20.0",
    "base58>=2.1.1",
    "httpx>=0.27.0",
    "tenacity>=8.2.3",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
